<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.battle.MatchingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@color/blue0"
            android:background="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/pretendard_extrabold"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matching_title"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="start"
            android:fontFamily="@font/pretendard_extrabold"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matching_subtitle"
            android:textSize="15sp"
            android:textColor="@color/grey_dark"
            android:layout_gravity="center"
            android:gravity="start"
            android:fontFamily="@font/pretendard_extrabold"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/blue0"
            app:queryHint="@string/search_hint"
            app:iconifiedByDefault="false"
            android:theme="@style/CustomSearchView"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>