<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@color/blue0"
            android:background="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/pretendard_extrabold"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingBottom="3dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/battle_title"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="start"
                android:fontFamily="@font/pretendard_extrabold"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/BattlefinishBtn"
                android:layout_width="70dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button"
                android:backgroundTint="@color/orange0"
                android:text="@string/battle_finish"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

        <!--Button 자리에 map fragment 넣어야 함. 위치 속성은 그대로 유지할 것-->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapFragmentContainer"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battle_record"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="@font/pretendard_extrabold"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"/>

            <!--거리, 시간 : 데이터 부분 가변형으로 수정 필요-->
            <TextView
                android:id="@+id/today_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battle_distance"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/today_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:paddingHorizontal="40dp">
                <Button
                    android:id="@+id/startBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/blue0"
                    android:text="@string/startBtn"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/finishBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/grey_dark2"
                    android:text="@string/endBtn"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>