<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login2Activity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp">
    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="Back"
        android:textSize="13sp"
        android:background="@drawable/button"
        android:backgroundTint="@color/blue0"
        android:textColor="@color/white"
        android:layout_gravity="left"
        android:layout_marginBottom="60dp"/>

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/login2_id"
        android:inputType="text"
        android:textSize="17sp"
        android:fontFamily="@font/pretendard_medium"
        android:autofillHints="ID"
        android:paddingHorizontal="15dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/login2_password"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:fontFamily="@font/pretendard_medium"
        android:autofillHints="password"
        android:paddingHorizontal="15dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:text="로그인"
        android:textSize="17sp"
        android:fontFamily="@font/pretendard_medium"
        android:background="@drawable/button"
        android:backgroundTint="@color/blue0"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:text="@string/login2_signup"
        android:textSize="17sp"
        android:fontFamily="@font/pretendard_extrabold"
        android:textColor="@color/blue0" />

</LinearLayout>