<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="right"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_running_record"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:gravity="start"
        android:fontFamily="@font/pretendard_extrabold"
        android:paddingHorizontal="30dp"
        android:paddingBottom="8dp"/>

    <!--Button 자리에 map fragment 넣어야 함. 위치 속성은 그대로 유지할 것-->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:text="@string/app_name"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:paddingVertical="15dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/blue0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/today_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="달린 거리  10.19 km"
            android:textColor="@color/white"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/today_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="소요 시간  13:34:99"
            android:textColor="@color/white"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="18sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battle_end"
        android:textColor="@color/grey_dark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/pretendard_extrabold"
        android:gravity="center"
        android:padding="15dp"/>


</LinearLayout>